Fix overflow and border colour

--- a/resources/css/UI/Layout/Wrapper/_Wrapper.scss
+++ b/resources/css/UI/Layout/Wrapper/_Wrapper.scss
@@ -7,5 +7,6 @@
     display: flex;
     flex-direction: column;
     font-family: 'Inter', sans-serif;
-    line-height: 1.5; 
+    line-height: 1.5;
+    overflow-x: hidden;
 }
